# bazel_examples

./: LICENSE  MODULE.bazel  README.md
aspects/: BUILD.bazel  README.md
aspects/rules/: validate_test_size.bzl
